--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+<h1><%= @restaurant.name%></h1>
+<ul>
+<% @restaurant.orders.each do |order| %>
+    <li><%= link_to order.id, restaurant_order_path(order)  %></li>
+    <% end %>
+</ul>
