--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,2 +1,13 @@
 <h1>Orders#edit</h1>
-<p>Find me in app/views/orders/edit.html.erb</p>
+
+<%= form_for @order do |f| %>
+<%= f.label :quantity %>
+<%= f.number_field :quantity %>
+<%= f.label :farm_id %>
+<%= f.collection_select :farm_id, Farm.all, :id, :name %>
+<%= f.label :fruit_id %>
+<%= f.collection_select :fruit_id, Fruit.all, :id, :name %>
+<%= f.label :restaurant_id %>
+<%= f.collection_select :restaurant_id, Restaurant.all, :id, :name %>
+<%= f.submit %>
+<% end  %>
