--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Orders#new</h1>
 
-<%= form_for @order do |f| %>
+<!-- <%= form_for @order do |f| %>
 <%= f.label :quantity %>
 <%= f.number_field :quantity %>
 <%= f.label :farm_id %>
@@ -10,4 +10,13 @@
 <%= f.label :restaurant_id %>
 <%= f.collection_select :restaurant_id, Restaurant.all, :id, :name %>
 <%= f.submit %>
-<% end  %>
+<% end  %> -->
+
+<%= form_tag('/orders/'), method: :post do %>
+    <% @fruits.each do |fruit| %>
+        <%= label_tag fruit.name %>
+        <%= number_field_tag name=fruit.name %>
+    <% end %>
+    <%= submit_tag "submit" %>
+    <% end %>
+<% end %>
