--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Orders#new</h1>
 
-<%= form_tag('/orders', method: :post) do %>
+<%= form_tag farm_orders_path, method: :post do %>
     <% @fruits.each do |fruit| %>
         <%= label_tag fruit.name %>
         <%= number_field_tag name=fruit.name %>
