--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @restaurant.name%></h1>
 <ul>
 <% @restaurant.orders.each do |order| %>
-    <li><%= link_to order.id, restaurant_order_path(order)  %></li>
+    <li><%= link_to order.id, "/restaurants/#{@restaurant.id}/orders/#{order.id}"  %></li>
     <% end %>
 </ul>
